<resources>
    <string name="app_name">EasyDriveProj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_logo">לוגו אפליקציה</string>
    <string name="ministry_of_education">כניסה באמצעות משרד החינוך</string>

    <!-- Role Selection Activity Strings -->
    <string name="welcome_to_easydrive">ברוכים הבאים ל-EasyDrive</string>
    <string name="choose_your_role">בחר את התפקיד שלך באפליקציה:</string>

    <!-- Student Role -->
    <string name="student_title">תלמיד/ה</string>
    <string name="student_description">מחפש/ת מורה נהיגה לשיעורים</string>
    <string name="student_icon_description">סמל תלמיד</string>
    <string name="select_student_role">בחר</string>

    <!-- Teacher Role -->
    <string name="teacher_title">מורה נהיגה</string>
    <string name="teacher_description">מלמד/ת נהיגה ומחפש/ת תלמידים</string>
    <string name="teacher_icon_description">סמל מורה</string>
    <string name="select_teacher_role">בחר</string>

    <string-array name="transmission_types">
        <item>אוטומט</item>
        <item>ידני</item>
    </string-array>

    <string-array name="cities_list">
        <item>תל אביב</item>
        <item>ירושלים</item>
        <item>חיפה</item>
        <item>באר שבע</item>
        <item>ראשון לציון</item>
        <item>פתח תקווה</item>
        <item>נתניה</item>
        <item>רעננה</item>
        <item>הרצליה</item>
        <item>חולון</item>
        <item>אשדוד</item>
        <item>בני ברק</item>
        <item>רמת גן</item>
        <item>נצרת</item>
        <item>עפולה</item>
        <item>כפר סבא</item>
        <item>אילת</item>
        <item>לוד</item>
        <item>רמלה</item>
        <item>קרית שמונה</item>
        <item>אחר</item>
    </string-array>

    <!--fire base -->
    <string name="client_id">592852698508-1kif2864eorph04t6alk9p88s3mftog3.apps.googleusercontent.com</string>
</resources>